--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,7 +7,9 @@
 @import "./Base/reset";
 
 @import "./Layout/header";
+@import "./Layout/menu";
 @import "./Layout/carousel";
+@import "./Layout/productFeature";
 @import "./Layout/footer";
 
 @import "./Pages/home";
