--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 @import "./Layout/header";
 @import "./Layout/menu";
 @import "./Layout/carousel";
+@import "./Layout/detail";
 @import "./Layout/productFeature";
 @import "./Layout/footer";
 
