--- a/sass/Layout/_carousel.scss
+++ b/sass/Layout/_carousel.scss
@@ -18,12 +18,7 @@
         font-weight: 300;
       }
       .btn {
-        font-size: 2rem;
-        margin: 2rem 0;
-        background-color: #f8b653;
-        padding: 1rem 2rem;
-        color: $text-color-white;
-        border: none;
+        @include btn;
       }
     }
   }
