--- a/sass/Abstracts/_variables.scss
+++ b/sass/Abstracts/_variables.scss
@@ -3,4 +3,7 @@ $text-color-black: #000;
 
 // color
 $color-black: #000;
-$color-white: #fff
+$color-white: #fff;
+$yellow: #f5ba1a;
+$black: #000000;
+$grey: #cccccc;
